# absl17-lts_2025_08_14

./: .bazelrc  WORKSPACE.bazel  format.sh  shared.sh  symbol.sh  target.sh  unused.sh
absl/algorithm/: BUILD.bazel
absl/base/: BUILD.bazel  attributes.h  call_once.h  casts.h  log_severity.h  macros.h  no_destructor.h  optimization.h
absl/base/internal/: atomic_hook.h  cycleclock.cc  direct_mmap.h  endian.h  low_level_alloc.cc  low_level_alloc.h  low_level_scheduling.h  raw_logging.h  spinlock_wait.cc  spinlock_wait.h  spinlock_win32.inc  sysinfo.cc  tracing.h
absl/cleanup/: BUILD.bazel
absl/container/: BUILD.bazel  btree_map.h  btree_set.h  fixed_array.h  inlined_vector.h
absl/container/internal/: btree.h  btree_container.h  common_policy_traits.h  compressed_tuple.h  hashtable_control_bytes.h  hashtable_debug.h  hashtable_debug_hooks.h  hashtablez_sampler.cc  hashtablez_sampler_force_weak_definition.cc  layout.h  raw_hash_map.h  raw_hash_set.cc  raw_hash_set.h
absl/copts/: rules.bzl
absl/crc/: BUILD.bazel  crc32c.h
absl/crc/internal/: cpu_detect.cc  crc.cc  crc32_x86_arm_combined_simd.h  crc_cord_state.cc  crc_x86_arm_combined.cc  non_temporal_arm_intrinsics.h
absl/debugging/: BUILD.bazel  leak_check.cc  stacktrace.cc  symbolize.h  symbolize_unimplemented.inc  symbolize_win32.inc
absl/debugging/internal/: bounded_utf8_length_sequence.h  decode_rust_punycode.cc  demangle.cc  demangle.h  demangle_rust.cc  elf_mem_image.cc  elf_mem_image.h  stacktrace_aarch64-inl.inc  stacktrace_arm-inl.inc  stacktrace_config.h  stacktrace_generic-inl.inc  stacktrace_powerpc-inl.inc  stacktrace_riscv-inl.inc  stacktrace_unimplemented-inl.inc  stacktrace_win32-inl.inc  stacktrace_x86-inl.inc  symbolize.h  vdso_support.cc
absl/flags/: BUILD.bazel  flag.h  marshalling.h  parse.cc  usage_config.cc  usage_config.h
absl/flags/internal/: flag.cc  private_handle_accessor.cc  usage.h
absl/functional/: BUILD.bazel
absl/functional/internal/: any_invocable.h  function_ref.h
absl/hash/: BUILD.bazel  hash.h
absl/hash/internal/: city.cc  hash.h
absl/log/: BUILD.bazel  absl_vlog_is_on.h  die_if_null.h
absl/log/internal/: BUILD.bazel  check_op.h  conditions.h  log_format.cc  log_impl.h  log_message.cc  nullstream.h  vlog_config.h
absl/memory/: BUILD.bazel
absl/meta/: BUILD.bazel  type_traits.h
absl/numeric/: BUILD.bazel  bits.h  int128.cc  int128.h  int128_have_intrinsic.inc  int128_no_intrinsic.inc
absl/profiling/: BUILD.bazel
absl/random/: BUILD.bazel  distributions.h
absl/random/internal/: BUILD.bazel
absl/status/: BUILD.bazel  status.cc  status.h  status_payload_printer.cc
absl/status/internal/: status_internal.cc  statusor_internal.h
absl/strings/: BUILD.bazel  cord.cc  cord.h  cord_analysis.cc  cord_analysis.h  escaping.cc  match.cc  match.h  numbers.cc  numbers.h  str_cat.cc  str_cat.h  str_format.h  str_split.h  string_view.h  substitute.cc  substitute.h
absl/strings/internal/: charconv_bigint.h  charconv_parse.cc  cord_rep_btree.cc  cord_rep_flat.h  cordz_functions.cc  cordz_handle.h  damerau_levenshtein_distance.cc  memutil.h  ostringstream.h  resize_uninitialized.h  str_split_internal.h
absl/strings/internal/str_format/: arg.cc  arg.h  bind.cc  extension.cc  extension.h  float_conversion.cc  output.cc  parser.cc  parser.h
absl/synchronization/: BUILD.bazel  barrier.cc  mutex.cc  mutex.h
absl/synchronization/internal/: futex_waiter.cc  futex_waiter.h  graphcycles.h  per_thread_sem.cc  per_thread_sem.h  sem_waiter.cc  stdcpp_waiter.cc  stdcpp_waiter.h  win32_waiter.cc
absl/time/: BUILD.bazel  duration.cc
absl/time/internal/: get_current_time_posix.inc
absl/time/internal/cctz/: BUILD.bazel
absl/types/: BUILD.bazel  compare.h
absl/utility/: BUILD.bazel
