load(
    "//absl/copts:rules.bzl",
    "absl17_cc_library",
)

licenses(["notice"])

absl17_cc_library(
    name = "algorithm",
    hdrs = [
        "algorithm.h",
    ],
    deps = [
        "//absl/base:config",
    ],
)

absl17_cc_library(
    name = "container",
    hdrs = [
        "container.h",
    ],
    deps = [
        ":algorithm",
        "//absl/base:config",
        "//absl/base:core_headers",
        "//absl/base:nullability",
        "//absl/meta:type_traits",
    ],
)
