load(
    "//absl/copts:rules.bzl",
    "absl17_cc_library",
)

licenses(["notice"])

absl17_cc_library(
    name = "atomic_hook",
    hdrs = [
        "internal/atomic_hook.h",
    ],
    visibility = [
        "//absl:__subpackages__",
    ],
    deps = [
        ":config",
        ":core_headers",
    ],
)

absl17_cc_library(
    name = "errno_saver",
    hdrs = [
        "internal/errno_saver.h",
    ],
    visibility = [
        "//absl:__subpackages__",
    ],
    deps = [
        ":config",
    ],
)

absl17_cc_library(
    name = "log_severity",
    srcs = [
        "log_severity.cc",
    ],
    hdrs = [
        "log_severity.h",
    ],
    deps = [
        ":config",
        ":core_headers",
    ],
)

absl17_cc_library(
    name = "no_destructor",
    hdrs = [
        "no_destructor.h",
    ],
    deps = [
        ":config",
        ":nullability",
    ],
)

absl17_cc_library(
    name = "nullability",
    hdrs = [
        "nullability.h",
    ],
    deps = [
        ":config",
        ":core_headers",
    ],
)

absl17_cc_library(
    name = "raw_logging_internal",
    srcs = [
        "internal/raw_logging.cc",
    ],
    hdrs = [
        "internal/raw_logging.h",
    ],
    visibility = [
        "//absl:__subpackages__",
    ],
    deps = [
        ":atomic_hook",
        ":config",
        ":core_headers",
        ":errno_saver",
        ":log_severity",
    ],
)

absl17_cc_library(
    name = "spinlock_wait",
    srcs = [
        "internal/spinlock_akaros.inc",
        "internal/spinlock_linux.inc",
        "internal/spinlock_posix.inc",
        "internal/spinlock_wait.cc",
        "internal/spinlock_win32.inc",
    ],
    hdrs = [
        "internal/spinlock_wait.h",
    ],
    visibility = [
        "//absl/base:__pkg__",
    ],
    deps = [
        ":base_internal",
        ":core_headers",
        ":errno_saver",
    ],
)

absl17_cc_library(
    name = "config",
    hdrs = [
        "config.h",
        "options.h",
        "policy_checks.h",
    ],
)

absl17_cc_library(
    name = "cycleclock_internal",
    hdrs = [
        "internal/cycleclock_config.h",
        "internal/unscaledcycleclock_config.h",
    ],
    visibility = [
        "//absl:__subpackages__",
    ],
    deps = [
        ":base_internal",
        ":config",
    ],
)

absl17_cc_library(
    name = "dynamic_annotations",
    srcs = [
        "internal/dynamic_annotations.h",
    ],
    hdrs = [
        "dynamic_annotations.h",
    ],
    deps = [
        ":config",
        ":core_headers",
    ],
)

absl17_cc_library(
    name = "core_headers",
    hdrs = [
        "attributes.h",
        "const_init.h",
        "macros.h",
        "optimization.h",
        "port.h",
        "thread_annotations.h",
    ],
    deps = [
        ":config",
    ],
)

absl17_cc_library(
    name = "malloc_internal",
    srcs = [
        "internal/low_level_alloc.cc",
    ],
    hdrs = [
        "internal/direct_mmap.h",
        "internal/low_level_alloc.h",
    ],
    deps = [
        ":base",
        ":base_internal",
        ":config",
        ":core_headers",
        ":dynamic_annotations",
        ":raw_logging_internal",
    ],
)

absl17_cc_library(
    name = "base_internal",
    hdrs = [
        "internal/hide_ptr.h",
        "internal/identity.h",
        "internal/scheduling_mode.h",
    ],
    visibility = [
        "//absl:__subpackages__",
    ],
    deps = [
        ":config",
        "//absl/meta:type_traits",
    ],
)

absl17_cc_library(
    name = "base",
    srcs = [
        "internal/cycleclock.cc",
        "internal/spinlock.cc",
        "internal/sysinfo.cc",
        "internal/thread_identity.cc",
        "internal/unscaledcycleclock.cc",
    ],
    hdrs = [
        "call_once.h",
        "casts.h",
        "internal/cycleclock.h",
        "internal/low_level_scheduling.h",
        "internal/per_thread_tls.h",
        "internal/spinlock.h",
        "internal/sysinfo.h",
        "internal/thread_identity.h",
        "internal/tsan_mutex_interface.h",
        "internal/unscaledcycleclock.h",
    ],
    deps = [
        ":atomic_hook",
        ":base_internal",
        ":config",
        ":core_headers",
        ":cycleclock_internal",
        ":dynamic_annotations",
        ":log_severity",
        ":nullability",
        ":raw_logging_internal",
        ":spinlock_wait",
        "//absl/meta:type_traits",
    ],
)

absl17_cc_library(
    name = "throw_delegate",
    srcs = [
        "internal/throw_delegate.cc",
    ],
    hdrs = [
        "internal/throw_delegate.h",
    ],
    visibility = [
        "//absl:__subpackages__",
    ],
    deps = [
        ":config",
        ":raw_logging_internal",
    ],
)

absl17_cc_library(
    name = "pretty_function",
    hdrs = [
        "internal/pretty_function.h",
    ],
    visibility = [
        "//absl:__subpackages__",
    ],
)

absl17_cc_library(
    name = "endian",
    hdrs = [
        "internal/endian.h",
        "internal/unaligned_access.h",
    ],
    visibility = [
        "//absl:__subpackages__",
    ],
    deps = [
        ":base",
        ":config",
        ":core_headers",
        ":nullability",
    ],
)

absl17_cc_library(
    name = "strerror",
    srcs = [
        "internal/strerror.cc",
    ],
    hdrs = [
        "internal/strerror.h",
    ],
    visibility = [
        "//absl:__subpackages__",
    ],
    deps = [
        ":config",
        ":core_headers",
        ":errno_saver",
    ],
)

absl17_cc_library(
    name = "fast_type_id",
    hdrs = [
        "fast_type_id.h",
    ],
    deps = [
        ":config",
    ],
)

absl17_cc_library(
    name = "prefetch",
    hdrs = [
        "prefetch.h",
    ],
    deps = [
        ":config",
        ":core_headers",
    ],
)

absl17_cc_library(
    name = "poison",
    srcs = [
        "internal/poison.cc",
    ],
    hdrs = [
        "internal/poison.h",
    ],
    visibility = [
        "//absl:__subpackages__",
    ],
    deps = [
        ":config",
        ":core_headers",
        ":malloc_internal",
    ],
)

absl17_cc_library(
    name = "iterator_traits_internal",
    hdrs = [
        "internal/iterator_traits.h",
    ],
    deps = [
        ":config",
        "//absl/meta:type_traits",
    ],
)

absl17_cc_library(
    name = "tracing_internal",
    srcs = [
        "internal/tracing.cc",
    ],
    hdrs = [
        "internal/tracing.h",
    ],
    visibility = [
        "//absl:__subpackages__",
    ],
    deps = [
        "//absl/base:config",
        "//absl/base:core_headers",
    ],
)

absl17_cc_library(
    name = "iterator_traits_test_helper",
    hdrs = [
        "internal/iterator_traits_test_helper.h",
    ],
    deps = [
        ":config",
    ],
)
