load(
    "//absl/copts:rules.bzl",
    "absl17_cc_library",
)

licenses(["notice"])

absl17_cc_library(
    name = "cleanup_internal",
    hdrs = [
        "internal/cleanup.h",
    ],
    deps = [
        "//absl/base:core_headers",
        "//absl/utility",
    ],
)

absl17_cc_library(
    name = "cleanup",
    hdrs = [
        "cleanup.h",
    ],
    deps = [
        ":cleanup_internal",
        "//absl/base:config",
        "//absl/base:core_headers",
    ],
)
