load(
    "//absl/copts:rules.bzl",
    "absl17_cc_library",
)

licenses(["notice"])

absl17_cc_library(
    name = "compressed_tuple",
    hdrs = [
        "internal/compressed_tuple.h",
    ],
    deps = [
        "//absl/utility",
    ],
)

absl17_cc_library(
    name = "fixed_array",
    hdrs = [
        "fixed_array.h",
    ],
    deps = [
        ":compressed_tuple",
        "//absl/algorithm",
        "//absl/base:config",
        "//absl/base:core_headers",
        "//absl/base:dynamic_annotations",
        "//absl/base:iterator_traits_internal",
        "//absl/base:throw_delegate",
        "//absl/hash:weakly_mixed_integer",
        "//absl/memory",
    ],
)

absl17_cc_library(
    name = "inlined_vector_internal",
    hdrs = [
        "internal/inlined_vector.h",
    ],
    deps = [
        ":compressed_tuple",
        "//absl/base:base_internal",
        "//absl/base:config",
        "//absl/base:core_headers",
        "//absl/memory",
        "//absl/meta:type_traits",
        "//absl/types:span",
    ],
)

absl17_cc_library(
    name = "inlined_vector",
    hdrs = [
        "inlined_vector.h",
    ],
    deps = [
        ":inlined_vector_internal",
        "//absl/algorithm",
        "//absl/base:core_headers",
        "//absl/base:iterator_traits_internal",
        "//absl/base:throw_delegate",
        "//absl/hash:weakly_mixed_integer",
        "//absl/memory",
        "//absl/meta:type_traits",
    ],
)

absl17_cc_library(
    name = "flat_hash_map",
    hdrs = [
        "flat_hash_map.h",
    ],
    deps = [
        ":container_memory",
        ":hash_container_defaults",
        ":raw_hash_map",
        "//absl/algorithm:container",
        "//absl/base:core_headers",
        "//absl/meta:type_traits",
    ],
)

absl17_cc_library(
    name = "flat_hash_set",
    hdrs = [
        "flat_hash_set.h",
    ],
    deps = [
        ":container_memory",
        ":hash_container_defaults",
        ":raw_hash_set",
        "//absl/algorithm:container",
        "//absl/base:core_headers",
        "//absl/memory",
        "//absl/meta:type_traits",
    ],
)

absl17_cc_library(
    name = "node_hash_map",
    hdrs = [
        "node_hash_map.h",
    ],
    deps = [
        ":container_memory",
        ":hash_container_defaults",
        ":node_slot_policy",
        ":raw_hash_map",
        "//absl/algorithm:container",
        "//absl/base:core_headers",
        "//absl/memory",
        "//absl/meta:type_traits",
    ],
)

absl17_cc_library(
    name = "node_hash_set",
    hdrs = [
        "node_hash_set.h",
    ],
    deps = [
        ":container_memory",
        ":hash_container_defaults",
        ":node_slot_policy",
        ":raw_hash_set",
        "//absl/algorithm:container",
        "//absl/base:core_headers",
        "//absl/memory",
        "//absl/meta:type_traits",
    ],
)

absl17_cc_library(
    name = "container_memory",
    hdrs = [
        "internal/container_memory.h",
    ],
    deps = [
        "//absl/base:config",
        "//absl/hash",
        "//absl/memory",
        "//absl/meta:type_traits",
        "//absl/utility",
    ],
)

absl17_cc_library(
    name = "hash_function_defaults",
    hdrs = [
        "internal/hash_function_defaults.h",
    ],
    visibility = [
        "//visibility:private",
    ],
    deps = [
        ":common",
        "//absl/base:config",
        "//absl/hash",
        "//absl/meta:type_traits",
        "//absl/strings",
        "//absl/strings:cord",
    ],
)

absl17_cc_library(
    name = "hash_container_defaults",
    hdrs = [
        "hash_container_defaults.h",
    ],
    deps = [
        ":hash_function_defaults",
        "//absl/base:config",
    ],
)

absl17_cc_library(
    name = "hash_policy_traits",
    hdrs = [
        "internal/hash_policy_traits.h",
    ],
    deps = [
        ":common_policy_traits",
        ":container_memory",
        "//absl/meta:type_traits",
    ],
)

absl17_cc_library(
    name = "common_policy_traits",
    hdrs = [
        "internal/common_policy_traits.h",
    ],
    visibility = [
        "//visibility:private",
    ],
    deps = [
        "//absl/meta:type_traits",
    ],
)

absl17_cc_library(
    name = "hashtable_debug",
    hdrs = [
        "internal/hashtable_debug.h",
    ],
    deps = [
        ":hashtable_debug_hooks",
    ],
)

absl17_cc_library(
    name = "hashtable_debug_hooks",
    hdrs = [
        "internal/hashtable_debug_hooks.h",
    ],
    deps = [
        "//absl/base:config",
    ],
)

absl17_cc_library(
    name = "hashtablez_sampler",
    srcs = [
        "internal/hashtablez_sampler.cc",
        "internal/hashtablez_sampler_force_weak_definition.cc",
    ],
    hdrs = [
        "internal/hashtablez_sampler.h",
    ],
    deps = [
        "//absl/base",
        "//absl/base:config",
        "//absl/base:core_headers",
        "//absl/base:no_destructor",
        "//absl/base:raw_logging_internal",
        "//absl/debugging:stacktrace",
        "//absl/memory",
        "//absl/profiling:exponential_biased",
        "//absl/profiling:sample_recorder",
        "//absl/synchronization",
        "//absl/time",
        "//absl/utility",
    ],
)

absl17_cc_library(
    name = "node_slot_policy",
    hdrs = [
        "internal/node_slot_policy.h",
    ],
    deps = [
        "//absl/base:config",
    ],
)

absl17_cc_library(
    name = "raw_hash_map",
    hdrs = [
        "internal/raw_hash_map.h",
    ],
    deps = [
        ":common_policy_traits",
        ":container_memory",
        ":raw_hash_set",
        "//absl/base:config",
        "//absl/base:core_headers",
        "//absl/base:throw_delegate",
        "//absl/meta:type_traits",
    ],
)

absl17_cc_library(
    name = "common",
    hdrs = [
        "internal/common.h",
    ],
    deps = [
        "//absl/meta:type_traits",
        "//absl/types:optional",
    ],
)

absl17_cc_library(
    name = "hashtable_control_bytes",
    hdrs = [
        "internal/hashtable_control_bytes.h",
    ],
    deps = [
        "//absl/base:config",
        "//absl/base:core_headers",
        "//absl/base:endian",
        "//absl/numeric:bits",
    ],
)

absl17_cc_library(
    name = "raw_hash_set_resize_impl",
    hdrs = [
        "internal/raw_hash_set_resize_impl.h",
    ],
    deps = [
        "//absl/base:config",
    ],
)

absl17_cc_library(
    name = "raw_hash_set",
    srcs = [
        "internal/raw_hash_set.cc",
    ],
    hdrs = [
        "internal/raw_hash_set.h",
    ],
    deps = [
        ":common",
        ":common_policy_traits",
        ":compressed_tuple",
        ":container_memory",
        ":hash_function_defaults",
        ":hash_policy_traits",
        ":hashtable_control_bytes",
        ":hashtable_debug_hooks",
        ":hashtablez_sampler",
        ":raw_hash_set_resize_impl",
        "//absl/base",
        "//absl/base:config",
        "//absl/base:core_headers",
        "//absl/base:dynamic_annotations",
        "//absl/base:endian",
        "//absl/base:iterator_traits_internal",
        "//absl/base:prefetch",
        "//absl/base:raw_logging_internal",
        "//absl/functional:function_ref",
        "//absl/hash",
        "//absl/hash:weakly_mixed_integer",
        "//absl/memory",
        "//absl/meta:type_traits",
        "//absl/numeric:bits",
        "//absl/utility",
    ],
)

absl17_cc_library(
    name = "layout",
    hdrs = [
        "internal/layout.h",
    ],
    deps = [
        "//absl/base:config",
        "//absl/base:core_headers",
        "//absl/debugging:demangle_internal",
        "//absl/meta:type_traits",
        "//absl/strings",
        "//absl/types:span",
        "//absl/utility",
    ],
)

absl17_cc_library(
    name = "btree",
    srcs = [
        "internal/btree.h",
        "internal/btree_container.h",
    ],
    hdrs = [
        "btree_map.h",
        "btree_set.h",
    ],
    deps = [
        ":common",
        ":common_policy_traits",
        ":compressed_tuple",
        ":container_memory",
        ":layout",
        "//absl/base:config",
        "//absl/base:core_headers",
        "//absl/base:raw_logging_internal",
        "//absl/base:throw_delegate",
        "//absl/hash:weakly_mixed_integer",
        "//absl/memory",
        "//absl/meta:type_traits",
        "//absl/strings",
        "//absl/strings:cord",
        "//absl/types:compare",
    ],
)
