load(
    "//absl/copts:rules.bzl",
    "absl17_cc_library",
)

licenses(["notice"])

absl17_cc_library(
    name = "stacktrace",
    srcs = [
        "internal/stacktrace_aarch64-inl.inc",
        "internal/stacktrace_arm-inl.inc",
        "internal/stacktrace_config.h",
        "internal/stacktrace_emscripten-inl.inc",
        "internal/stacktrace_generic-inl.inc",
        "internal/stacktrace_powerpc-inl.inc",
        "internal/stacktrace_riscv-inl.inc",
        "internal/stacktrace_unimplemented-inl.inc",
        "internal/stacktrace_win32-inl.inc",
        "internal/stacktrace_x86-inl.inc",
        "stacktrace.cc",
    ],
    hdrs = [
        "stacktrace.h",
    ],
    deps = [
        ":debugging_internal",
        "//absl/base:config",
        "//absl/base:core_headers",
        "//absl/base:dynamic_annotations",
        "//absl/base:malloc_internal",
        "//absl/base:raw_logging_internal",
    ],
)

absl17_cc_library(
    name = "symbolize",
    srcs = [
        "symbolize.cc",
        "symbolize_darwin.inc",
        "symbolize_elf.inc",
        "symbolize_emscripten.inc",
        "symbolize_unimplemented.inc",
        "symbolize_win32.inc",
    ],
    hdrs = [
        "internal/symbolize.h",
        "symbolize.h",
    ],
    deps = [
        ":debugging_internal",
        ":demangle_internal",
        "//absl/base",
        "//absl/base:config",
        "//absl/base:core_headers",
        "//absl/base:dynamic_annotations",
        "//absl/base:malloc_internal",
        "//absl/base:raw_logging_internal",
        "//absl/strings",
    ],
)

absl17_cc_library(
    name = "examine_stack",
    srcs = [
        "internal/examine_stack.cc",
    ],
    hdrs = [
        "internal/examine_stack.h",
    ],
    visibility = [
        "//absl/log/internal:__pkg__",
    ],
    deps = [
        ":stacktrace",
        ":symbolize",
        "//absl/base:config",
        "//absl/base:core_headers",
        "//absl/base:raw_logging_internal",
    ],
)

absl17_cc_library(
    name = "failure_signal_handler",
    srcs = [
        "failure_signal_handler.cc",
    ],
    hdrs = [
        "failure_signal_handler.h",
    ],
    deps = [
        ":examine_stack",
        ":stacktrace",
        "//absl/base",
        "//absl/base:config",
        "//absl/base:core_headers",
        "//absl/base:raw_logging_internal",
    ],
)

absl17_cc_library(
    name = "debugging_internal",
    srcs = [
        "internal/address_is_readable.cc",
        "internal/elf_mem_image.cc",
        "internal/vdso_support.cc",
    ],
    hdrs = [
        "internal/address_is_readable.h",
        "internal/addresses.h",
        "internal/elf_mem_image.h",
        "internal/vdso_support.h",
    ],
    visibility = [
        "//visibility:private",
    ],
    deps = [
        "//absl/base:config",
        "//absl/base:core_headers",
        "//absl/base:dynamic_annotations",
        "//absl/base:errno_saver",
        "//absl/base:raw_logging_internal",
    ],
)

absl17_cc_library(
    name = "demangle_internal",
    srcs = [
        "internal/demangle.cc",
    ],
    hdrs = [
        "internal/demangle.h",
    ],
    visibility = [
        "//absl/container:__pkg__",
        "//absl/debugging:__pkg__",
    ],
    deps = [
        ":demangle_rust",
        "//absl/base",
        "//absl/base:config",
        "//absl/base:core_headers",
        "//absl/base:nullability",
        "//absl/numeric:bits",
    ],
)

absl17_cc_library(
    name = "bounded_utf8_length_sequence",
    hdrs = [
        "internal/bounded_utf8_length_sequence.h",
    ],
    deps = [
        "//absl/base:config",
        "//absl/numeric:bits",
    ],
)

absl17_cc_library(
    name = "decode_rust_punycode",
    srcs = [
        "internal/decode_rust_punycode.cc",
    ],
    hdrs = [
        "internal/decode_rust_punycode.h",
    ],
    deps = [
        ":bounded_utf8_length_sequence",
        ":utf8_for_code_point",
        "//absl/base:config",
        "//absl/base:nullability",
    ],
)

absl17_cc_library(
    name = "demangle_rust",
    srcs = [
        "internal/demangle_rust.cc",
    ],
    hdrs = [
        "internal/demangle_rust.h",
    ],
    deps = [
        ":decode_rust_punycode",
        "//absl/base:config",
        "//absl/base:core_headers",
    ],
)

absl17_cc_library(
    name = "utf8_for_code_point",
    srcs = [
        "internal/utf8_for_code_point.cc",
    ],
    hdrs = [
        "internal/utf8_for_code_point.h",
    ],
    deps = [
        "//absl/base:config",
    ],
)

absl17_cc_library(
    name = "leak_check",
    srcs = [
        "leak_check.cc",
    ],
    hdrs = [
        "leak_check.h",
    ],
    deps = [
        "//absl/base:config",
        "//absl/base:core_headers",
    ],
)
