load(
    "//absl/copts:rules.bzl",
    "absl17_cc_library",
)

licenses(["notice"])

absl17_cc_library(
    name = "any_invocable",
    srcs = [
        "internal/any_invocable.h",
    ],
    hdrs = [
        "any_invocable.h",
    ],
    deps = [
        "//absl/base:config",
        "//absl/base:core_headers",
        "//absl/base:nullability",
        "//absl/meta:type_traits",
        "//absl/utility",
    ],
)

absl17_cc_library(
    name = "bind_front",
    srcs = [
        "internal/front_binder.h",
    ],
    hdrs = [
        "bind_front.h",
    ],
    deps = [
        "//absl/container:compressed_tuple",
        "//absl/meta:type_traits",
        "//absl/utility",
    ],
)

absl17_cc_library(
    name = "function_ref",
    srcs = [
        "internal/function_ref.h",
    ],
    hdrs = [
        "function_ref.h",
    ],
    deps = [
        ":any_invocable",
        "//absl/base:core_headers",
        "//absl/meta:type_traits",
    ],
)

absl17_cc_library(
    name = "overload",
    hdrs = [
        "overload.h",
    ],
    deps = [
        "//absl/base:config",
        "//absl/meta:type_traits",
    ],
)
