load(
    "//absl/copts:rules.bzl",
    "absl17_cc_library",
)

licenses(["notice"])

absl17_cc_library(
    name = "hash",
    srcs = [
        "internal/hash.cc",
        "internal/hash.h",
    ],
    hdrs = [
        "hash.h",
    ],
    deps = [
        ":city",
        ":weakly_mixed_integer",
        "//absl/base:config",
        "//absl/base:core_headers",
        "//absl/base:endian",
        "//absl/base:prefetch",
        "//absl/container:fixed_array",
        "//absl/functional:function_ref",
        "//absl/meta:type_traits",
        "//absl/numeric:bits",
        "//absl/numeric:int128",
        "//absl/strings",
        "//absl/types:optional",
        "//absl/types:variant",
        "//absl/utility",
    ],
)

absl17_cc_library(
    name = "city",
    srcs = [
        "internal/city.cc",
    ],
    hdrs = [
        "internal/city.h",
    ],
    deps = [
        "//absl/base:config",
        "//absl/base:core_headers",
        "//absl/base:endian",
    ],
)

absl17_cc_library(
    name = "weakly_mixed_integer",
    hdrs = [
        "internal/weakly_mixed_integer.h",
    ],
    visibility = [
        "//absl/container:__pkg__",
        "//absl/strings:__pkg__",
        "//absl/types:__pkg__",
    ],
    deps = [
        "//absl/base:config",
    ],
)
