load(
    "//absl/copts:rules.bzl",
    "absl17_cc_library",
)

licenses(["notice"])

absl17_cc_library(
    name = "bits",
    hdrs = [
        "bits.h",
        "internal/bits.h",
    ],
    deps = [
        "//absl/base:config",
        "//absl/base:core_headers",
        "//absl/base:endian",
    ],
)

absl17_cc_library(
    name = "int128",
    srcs = [
        "int128.cc",
        "int128_have_intrinsic.inc",
        "int128_no_intrinsic.inc",
    ],
    hdrs = [
        "int128.h",
    ],
    deps = [
        ":bits",
        "//absl/base:config",
        "//absl/base:core_headers",
        "//absl/types:compare",
    ],
)

absl17_cc_library(
    name = "representation",
    hdrs = [
        "internal/representation.h",
    ],
    deps = [
        "//absl/base:config",
    ],
)
