load(
    "//absl/copts:rules.bzl",
    "absl17_cc_library",
)

licenses(["notice"])

absl17_cc_library(
    name = "sample_recorder",
    hdrs = [
        "internal/sample_recorder.h",
    ],
    visibility = [
        "//absl:__subpackages__",
    ],
    deps = [
        "//absl/base:config",
        "//absl/base:core_headers",
        "//absl/synchronization",
        "//absl/time",
    ],
)

absl17_cc_library(
    name = "exponential_biased",
    srcs = [
        "internal/exponential_biased.cc",
    ],
    hdrs = [
        "internal/exponential_biased.h",
    ],
    visibility = [
        "//absl:__subpackages__",
    ],
    deps = [
        "//absl/base:config",
        "//absl/base:core_headers",
    ],
)

absl17_cc_library(
    name = "periodic_sampler",
    srcs = [
        "internal/periodic_sampler.cc",
    ],
    hdrs = [
        "internal/periodic_sampler.h",
    ],
    visibility = [
        "//absl:__subpackages__",
    ],
    deps = [
        ":exponential_biased",
        "//absl/base:core_headers",
    ],
)

absl17_cc_library(
    name = "profile_builder",
    srcs = [
        "internal/profile_builder.cc",
    ],
    hdrs = [
        "internal/profile_builder.h",
    ],
    visibility = [
        "//absl:__subpackages__",
    ],
    deps = [
        "//absl/base",
        "//absl/base:config",
        "//absl/base:raw_logging_internal",
        "//absl/container:btree",
        "//absl/container:flat_hash_map",
        "//absl/strings",
        "//absl/types:span",
    ],
)

absl17_cc_library(
    name = "hashtable",
    srcs = [
        "hashtable.cc",
    ],
    hdrs = [
        "hashtable.h",
    ],
    visibility = [
        "//absl:__subpackages__",
    ],
    deps = [
        ":profile_builder",
        "//absl/base:config",
        "//absl/container:hashtablez_sampler",
        "//absl/status:statusor",
        "//absl/strings",
        "//absl/strings:string_view",
        "//absl/time",
        "//absl/types:span",
    ],
)
